<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Set App</string>
    <string name="action_settings">Settings</string>
    <string name="play_button">New Game</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="default_button">I am a button!</string>
    <string name="resume_button">Resume Game</string>
    <string name="options_button"> Settings </string>
    <string name="not_a_set"> Not a valid set! </string>
    <string name="ok"> Okay. </string>
    <string name="moreCards">More Cards</string>
    <string name="numCards"> Number of cards: </string>
    <string name="nineCards"> 9 </string>
    <string name="twelveCards"> 12 </string>
    <string name="fifteenCards"> 15 </string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="instructions"> Instructions </string>
    <string name="instructA" > A set is a group of three cards which are either all the same or all
				different in each individual characteristic. The four characteristics are number 
				(one, two, or three), color (red, green, or purple), shape (diamond, squiggle, or 
				oval), and fill (solid, lined, or open). In order to form a set, three cards must 
				all have the same number, or have three different numbers, all the same color, or 
				three different colors, etc. \n</string>
	<string name="instructB" > If three cards can be described as "two of ____ and one of ____ ," then they are not 
	    		a set. \n </string>
	<string name="set" > \nThis is a set. The cards are all red diamonds, but they have different numbers and
	    		different fills. \n </string>
	<string name="notSet" > \nThis is not a set. The cards have the same number, different colors, and different fills, 
	    				but there are two diamonds and one squiggle. </string>
    <string name="hello_world">Hello world!</string>

</resources>
