<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityOptions"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >
        
     
     <ToggleButton
         android:id="@+id/twelveCards"
         android:layout_centerHorizontal="true"
		 style="@style/ToggleStyle"
         android:text="@string/twelveCards" >
     </ToggleButton>
     
     <ToggleButton
         android:id="@+id/nineCards"
         android:layout_toLeftOf="@id/twelveCards"
		 style="@style/ToggleStyle"
         android:text="@string/nineCards" >
     </ToggleButton>
     
     <ToggleButton
         android:id="@+id/fifteenCards"
         android:layout_toRightOf="@id/twelveCards"
		 style="@style/ToggleStyle"
         android:text="@string/fifteenCards" >
     </ToggleButton>
        
</RelativeLayout>