<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    <Button android:id="@+id/newgamebutton"
        style="@style/GameButtonStyle"
        android:text="@string/play_button"  
        android:visibility="visible" >
    </Button>
    
    <Button android:id="@+id/resumebutton"
        style="@style/GameButtonStyle"
        android:text="@string/resume_button"  
        android:visibility="gone" >
    </Button> 
    
    <Button android:id="@+id/optionsButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/newgamebutton"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/options_button"  
        android:onClick="options" >
    </Button>
    
</RelativeLayout>
