<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   	android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/instruct_horizontal_margin"
    android:paddingRight="@dimen/instruct_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:isScrollContainer="true"
    tools:context=".InstructionsActivity" >
    
    <TextView
        android:id="@+id/instructA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" 
        android:text="@string/instructA" />
    
    <TableRow
        android:id="@+id/isSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal" > 
        
        <com.example.setapp.CardView
            android:id="@+id/setCardA" > 
        </com.example.setapp.CardView>
        
        <com.example.setapp.CardView
            android:id="@+id/setCardB" > 
        </com.example.setapp.CardView>
        
        <com.example.setapp.CardView
            android:id="@+id/setCardC" > 
        </com.example.setapp.CardView>
        
     </TableRow>
     
    <TextView android:id="@+id/caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/set"/>
    
        
    <TextView
        android:id="@+id/instructB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" 
        android:text="@string/instructB" />
    
    <TableRow
        android:id="@+id/isNotSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal" > 
        
        <com.example.setapp.CardView
            android:id="@+id/notsetCardA" > 
        </com.example.setapp.CardView>
        
        <com.example.setapp.CardView
            android:id="@+id/notsetCardB" > 
        </com.example.setapp.CardView>
        
        <com.example.setapp.CardView
            android:id="@+id/notsetCardC" > 
        </com.example.setapp.CardView>
        
     </TableRow>
     
        <TextView android:id="@+id/caption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/notSet"/>
        
     <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal" > 
        
    	<Button android:id="@+id/resumebutton"
        android:text="@string/resume_button" 
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:onClick="resumeGame" >
   		 </Button> 
    
       <Button android:id="@+id/newgamebutton"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/play_button"  
        android:onClick="playGame" >
        </Button>
        
        <Button android:id="@+id/optionsButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/options_button"  
        android:onClick="options" >
         </Button>
    
    </TableRow>
    
</TableLayout>
